@@ -2,7 +2,7 @@
 
   <Description about="urn:mozilla:install-manifest">
     <em:id>{123b2220-59cb-11db-b0de-0800200c9a66}</em:id>
-    <em:version>0.10.9.1</em:version>
+    <em:version>0.10.9.2</em:version>
     <em:type>2</em:type>
 
     <!-- Firefox --> 
